g8Scaffold fixed